# OpenONVIF

./: README.md  buildAll.sh
OnvifSDK/: CMakeLists.txt
OnvifSDK/Eventing/: .EventingServiceImpl.h.swp  EventingServiceImpl.cpp  EventingServiceImpl.h  NotificationProducer.cpp  NotificationProducer.h
OnvifSDK/WsDiscovery/: discoverable.cpp  remotediscovery_proxy.cpp  wsa.cpp  wsa.hpp
OnvifSDK/cmake/: FindGSOAP.cmake  FindGSOAP_zcu.cmake
OnvifSDK/include/: AnalyticsServiceImpl.h  BaseClient.h  BaseServer.h  DeviceClient.h  DeviceIOClient.h  DeviceIOServiceImpl.h  DeviceServiceImpl.h  DisplayClient.h  DisplayServiceImpl.h  MediaServiceImpl.h  OnvifSDK.h  ReceiverClient.h  ReceiverServiceImpl.h  RecordingClient.h  RecordingServiceImpl.h  ReplayServiceImpl.h  SearchServiceImpl.h
OnvifSDK/source/: AnalyticsServiceImpl.cpp  BaseClient.cpp  BaseServer.cpp  DeviceClient.cpp  DeviceIOClient.cpp  DeviceIOServiceImpl.cpp  DeviceIOTypes.cpp  DeviceInfoStorage.cpp  DeviceServiceImpl.cpp  DeviceTypes.cpp  DisplayClient.cpp  DisplayServiceImpl.cpp  DisplayTypes.cpp  MediaServiceImpl.cpp  MediaTypes.cpp  ReceiverClient.cpp  ReceiverServiceImpl.cpp  ReceiverTypes.cpp  RecordingClient.cpp  RecordingTypes.cpp  ReplayTypes.cpp  SearchTypes.cpp
OnvifSDK/xml/: analytics.wsdl  b-2.xsd  bf-2.xsd  bw-2.wsdl  devicemgmt.wsdl  display.wsdl  event.wsdl  media.wsdl  onvif.xsd  r-2.xsd  rw-2.wsdl  search.wsdl  t-1.xsd  ws-addr.xsd  ws-discovery.xsd
common/: sigrlog.h
examples/OnvifClient/: CMakeLists.txt  README  mainClient.cpp
examples/OnvifServer/: CMakeLists.txt  EventsEmitter.cpp  OnvifTestServer.cpp  OnvifTestServer.h  README  mainServ.cpp
